# awesome-project

./: README.md  README.rst  pyproject.toml
awesome/: stuff.py
