[tool.poetry]
name = "awesome"
version = "0.1.0"
description = ""
authors = ["Ian Lee <IanLee1521@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.9"
requests = "^2.25.1"

[tool.poetry.dev-dependencies]
pytest = "^5.2"

[tool.poetry.scripts]
demo_tool = 'awesome.stuff:demo'

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
